[tool.poetry]
name = "secre-api"
version = "0.1.0"
description = "API for interaction with secre bot."
authors = ["sarthhh <shiva02939@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "secre_api"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.92.0"
Pillow = "^9.4.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.247"
isort = "^5.12.0"
pyright = "^1.1.294"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
