[tool.poetry]
name = "api"
version = "0.1.0"
description = "API for interaction with secre bot."
authors = ["sarthhh <shiva02939@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.scripts]
secre_api = "api.main:main"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.92.0"
Pillow = "^9.4.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.247"
isort = "^5.12.0"
pyright = "^1.1.294"

[tool.ruff]
line-length = 120

[tool.pyright]
include = ["api"]
pythonVersion = "3.9"
typeCheckingMode = "strict"
reportPrivateUsage = false
reportImportCycles = false

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["api"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
